# borealis

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build_nx.yml  build_pc.yml
demo/: CMakeLists.txt  main.cpp  pokemon_view.hpp  recycling_list_tab.cpp
